--- a/sass/extend/extend.scss
+++ b/sass/extend/extend.scss
@@ -22,3 +22,10 @@
     justify-content: space-between;
     align-items: center;
 }
+
+%flexwrapcenter {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;  
+}
