--- a/sass/la-note-enchantee.css
+++ b/sass/la-note-enchantee.css
@@ -1,5 +1,5 @@
 @import "animations/animations.css";
-#main-ctnr .order-ctnr, #header-menu .header-ctnr a, #header-menu .header-ctnr {
+#main-ctnr .order-ctnr, #main-ctnr #menu-ctnr .section-menu-ctnr .menu-list li .menu-selected-checkbox, #header-menu .header-ctnr a, #header-menu .header-ctnr {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,6 +9,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+#main-ctnr #menu-ctnr .section-menu-ctnr .menu-list, #main-ctnr #menu-ctnr {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 #header-menu {
@@ -23,7 +30,6 @@
   font-size: 20px;
   position: absolute;
   left: 35px;
-  /* bottom: 12px; */
   top: 50%;
   transform: translate(-50%, -50%);
 }
@@ -52,12 +58,12 @@
   background-color: #f6f6f6;
   border-radius: 40px 40px 0 0;
   margin-top: -25px;
+  position: relative;
 }
 #main-ctnr .title-heart h2 {
   font-family: "Shrikhand", cursive;
   font-size: 28px;
   padding: 30px 16px;
-  position: relative;
 }
 #main-ctnr .title-heart button {
   border: none;
@@ -81,10 +87,6 @@
   transform: translateY(-50%) scale(1.02);
 }
 #main-ctnr #menu-ctnr {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   background-color: #f6f6f6;
 }
@@ -114,10 +116,6 @@
   padding: 0;
   width: 100%;
   margin: 10px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 #main-ctnr #menu-ctnr .section-menu-ctnr .menu-list li {
   opacity: 0;
@@ -175,9 +173,6 @@
   right: -22%;
   width: 16%;
   border-radius: 0 6px 6px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 #main-ctnr #menu-ctnr .section-menu-ctnr .menu-list li .menu-selected-checkbox i {
   background-color: white;
@@ -191,6 +186,7 @@
 #main-ctnr #menu-ctnr .section-menu-ctnr .menu-list li:hover .menu-selected-checkbox {
   transition: 0.4s linear right;
   right: 0;
+  color: #99E2D0;
 }
 #main-ctnr #menu-ctnr .section-menu-ctnr .menu-list li:hover i {
   -webkit-animation: icon-spin 0.7s ease-in-out;
